# team-management-system

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/accounts/: urls.py
backend/accounts/fixtures/: sites.json  users.json
backend/accounts/forms/: __init__.py  login.py  password_reset.py  register.py  user.py
backend/accounts/migrations/: 0001_initial.py
backend/accounts/models/: user.py
backend/accounts/utils/: __init__.py  user_manager.py
backend/accounts/validators/: __init__.py  lowercase.py  special_character.py  uppercase.py
backend/accounts/views/: __init__.py  index.py  logout.py
backend/app/: settings.py  urls.py
backend/projects/: urls.py
backend/projects/fixtures/: projects.json
backend/projects/forms/: __init__.py  board.py  board_column.py  project.py
backend/projects/migrations/: 0001_initial.py
backend/projects/models/: __init__.py  board.py  board_column.py  project.py  project_member.py  project_member_rating.py  task.py  task_comment.py
backend/projects/utils/: __init__.py  project_member_rating_helper.py  project_member_ratings.py
backend/projects/views/: dashboard.py
backend/static/css/: index.css  index.css.map  index.scss  main.css  main.css.map  main.scss  main_no_auth.css  main_no_auth.css.map
backend/static/js/: index.js  main.js
backend/templates/: dashboard.html  index.html
backend/templates/core/: base.html  bs_form_snippet.html  (+2 more)
backend/utils/: bs_form_renderer.py  mail_service.py
docker/: .db.env  .django.env  Dockerfile.back
requirements/: development.txt
(+120 files in other folders)
